fixed font scaling on mobile devices

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -385,6 +385,9 @@ footer {
 {
   .header h1
   {
-    font-size:20px;
+    font-size:25px;
+  }
+  .about h2{
+    font-size: 1.5em;
   }
 }
